--- a/action.yml
+++ b/action.yml
@@ -41,12 +41,12 @@ runs:
     - name: Create wiki directory
       shell: bash
       run: mkdir -p ${{ inputs.wiki_path }}
-    - name: Ensure executable permissions
+    - name: Fix executable permissions
       shell: bash
-      run: chmod +x ${{ github.action_path }}/entrypoint.sh
+      run: chmod +x $GITHUB_ACTION_PATH/entrypoint.sh
     - name: Process Rust files
       shell: bash
-      run: ${{ github.action_path }}/entrypoint.sh
+      run: $GITHUB_ACTION_PATH/entrypoint.sh
       env:
         SOURCE_PATH: ${{ inputs.source_path }}
         WIKI_PATH: ${{ inputs.wiki_path }}
